# GC-Lab2-ConwaysGameOfLife

./: CMakeLists.txt  README.md  main.cpp
